Fix alignment of BreadcrumbBarField
- Alignment of items in dense mode
- Alignment of items to the label

319490

--- a/eclipse-scout-core/src/form/fields/breadcrumbbarfield/BreadcrumbBarField.less
+++ b/eclipse-scout-core/src/form/fields/breadcrumbbarfield/BreadcrumbBarField.less
@@ -3,12 +3,18 @@
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
- * http://www.eclipse.org/legal/epl-v10.html
+ * https://www.eclipse.org/legal/epl-v10.html
  *
  * Contributors:
  *     BSI Business Systems Integration AG - initial API and implementation
  */
 .breadcrumb-bar-field > .field {
-  padding-top: @borderless-field-padding-y;
-  padding-bottom: @borderless-field-padding-y + 1px; // BreadCrumbItem uses 14px instead of 13px font size
+
+  // BreadCrumbItem uses 14px instead of 13px font size
+  padding-bottom: @breadcrumb-bar-field-padding-bottom;
+
+  .dense & {
+    // But it uses normal 13px in dense mode
+    padding-bottom: @breadcrumb-bar-field-padding-bottom-dense;
+  }
 }
