--- a/eclipse-scout-core/src/style/sizes.less
+++ b/eclipse-scout-core/src/style/sizes.less
@@ -3,7 +3,7 @@
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
- * http://www.eclipse.org/legal/epl-v10.html
+ * https://www.eclipse.org/legal/epl-v10.html
  *
  * Contributors:
  *     BSI Business Systems Integration AG - initial API and implementation
@@ -17,6 +17,8 @@
 @border-radius-medium: 8px;
 @border-radius-large: 12px;
 @borderless-field-padding-y: @text-field-padding-y + 1px;
+@breadcrumb-bar-field-padding-bottom: 0;
+@breadcrumb-bar-field-padding-bottom-dense: 4px;
 @collapse-handle-border-radius: @border-radius-medium;
 @control-border-radius: @border-radius;
 @control-alternative-border-radius: @control-border-radius;
